--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,51 @@
 body {
   font-family: 'Rubik';
 }
+
+@media screen and (min-width: 400px) {
+  /* Tamaño del scroll */
+  ::-webkit-scrollbar {
+    width: 14px;
+    height: 14px;
+  }
+  /* Estilos barra (thumb) de scroll */
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(62, 64, 75);
+    border-radius: 8px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #c62828;
+  }
+  /* Estilos track de scroll */
+  ::-webkit-scrollbar-track {
+    background-color: #d3d3d3;
+    background-color: rgba(27, 30, 50, 0.95);
+  }
+  ::-webkit-scrollbar-button:single-button {
+    /*     background-color: #428866;
+ */
+    background-color: rgba(27, 30, 50, 0.15);
+    display: block;
+    border-style: solid;
+    height: 13px;
+    max-width: 16px;
+  }
+  /* Up */
+  ::-webkit-scrollbar-button:single-button:vertical:decrement {
+    border-width: 0 8px 8px 8px;
+    border-color: transparent transparent #555555 transparent;
+  }
+
+  ::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+    border-color: transparent transparent #c62828 transparent;
+  }
+  /* Down */
+  ::-webkit-scrollbar-button:single-button:vertical:increment {
+    border-width: 8px 8px 0 8px;
+    border-color: #555555 transparent transparent transparent;
+  }
+
+  ::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+    border-color: #c62828 transparent transparent transparent;
+  }
+}
